# DinoKnot

./: .gitignore  CMakeLists.txt  DinoKnot  DinoKnot.cpp  HFold.cpp  HFold_interacting.cpp  HFold_interacting_multimodel  Makefile  Makefile (copy).am  Makefile.am  Makefile.in  README  README.md  Result.cpp  Result.h  Result.hh  VM_final.cpp  W_final.cpp  W_final.h  aa.txt  aclocal.m4  cmdline.cc  cmdline.hh  config.status  configure  configure (copy).ac  configure.ac  data  dinoknot.h  dinoknot.hh  h_common.cpp  h_common.h  h_externs.h  h_globals.h  hfold.h  hfold_interacting.h  hfold_validation.cpp  hfold_validation.h  hotspot_file.txt  input.txt  (+4 more)
.deps/: DinoKnot.Po  HFold_interacting.Po  VM_final.Po  V_final.Po  W_final.Po  h_common.Po  hfold_validation.Po  pseudo_loop.Po
autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3  traces.4
conda_recipe/: README.md  meta.yaml
simfold/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  config.status  libsimfold.la  melting_temp.cpp  shape_data.cpp  shape_data.h  simfold  simfold.cpp  simfold.pc  simfold_pf  simfold_pf.cpp  test_get_counts  test_get_counts.cpp
simfold/.deps/: simfold.Po  simfold_pf.Po  test_get_counts.Po
simfold/.libs/: libsimfold.lai  libsimfold.so.0.0.0  simfold  simfold_pf  test_get_counts
simfold/autom4te.cache/: requests
simfold/include/: constants.h  externs.h  globals.h  init.h  structs.h
simfold/params/: multirnafold.conf  turner-asint1x2-pmo.dh  turner-dangle-pmo.dh  turner-loop-pmo.dh  turner-miscloop-pmo.dh  turner-sint2-pmo.dh  turner-sint4-pmo.dh  turner-stack-pmo.dh  turner-tloop-pmo.dh  turner-tstacki-pmo.dh
simfold/src/common/: common.cpp  common.h  init.cpp  params.cpp  params.h
simfold/src/common/.deps/: common.Plo  init.Plo  params.Plo
simfold/src/simfold/: Hotspot.cpp  Hotspot.h  s_energy_matrix.cpp  s_energy_matrix.h  s_hairpin_loop.cpp  s_hairpin_loop.h  s_internal_loop.cpp  s_internal_loop.h  s_min_folding.cpp  s_min_folding.h  s_multi_loop.cpp  s_multi_loop.h  s_partition_function.cpp  s_partition_function_ISMB.cpp  s_partition_function_RESTRICTED.cpp  s_partition_function_UNRESTRICTED.cpp  s_partition_function_complex.cpp  s_partition_function_savedangle.cpp  s_specific_functions.cpp  s_specific_functions.h  s_stacked_pair.cpp  s_stacked_pair.h  s_sub_folding.cpp
simfold/src/simfold/.deps/: s_energy_matrix.Plo  s_hairpin_loop.Plo  s_internal_loop.Plo  s_min_folding.Plo  s_multi_loop.Plo  s_multi_loop_sub.Plo  s_partition_function.Plo  s_specific_functions.Plo  s_stacked_pair.Plo  s_sub_folding.Plo
src/: DinoKnot.cpp  V_final.cpp  V_final.h  W_final.cpp  W_final.h  dinoknot.hh  hfold_validation.cpp  hfold_validation.h
